made some of the changes